--- a/Lesson1/project/index.html
+++ b/Lesson1/project/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Интернет-магазин</title>
 </head>
 <body>
 <header>
+    <img class="logo" src="https://picsum.photos/40" alt="logo">
     <button class="btn-cart" type="button">Корзина</button>
 </header>
 <main>
